# ChangeLog for www-servers/apache
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.73 2008/06/11 19:08:59 hollow Exp $

*apache-2.2.8-r4 (11 Jun 2008)

  11 Jun 2008; Benedikt Böhm <hollow@gentoo.org> -apache-2.2.6-r7.ebuild,
  -apache-2.2.8-r2.ebuild, +apache-2.2.8-r4.ebuild:
  fix #220353

  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> apache-2.2.8-r3.ebuild:
  keyword ~sparc-fbsd

  05 Jun 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  apache-2.2.8-r3.ebuild:
  ppc stable, bug #222643

  02 Jun 2008; Richard Freeman <rich0@gentoo.org> apache-2.2.8-r3.ebuild:
  amd64 stable - 222643

  02 Jun 2008; Raúl Porcel <armin76@gentoo.org> apache-2.2.8-r3.ebuild:
  alpha/ia64/sparc stable wrt #222643

  02 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  apache-2.2.8-r3.ebuild:
  stable x86, security bug 222643

  02 Jun 2008; Markus Rothe <corsair@gentoo.org> apache-2.2.8-r3.ebuild:
  Stable on ppc64; bug #222643

  02 Jun 2008; Jeroen Roovers <jer@gentoo.org> apache-2.2.8-r3.ebuild:
  Stable for HPPA (bug #222643).

*apache-2.2.8-r3 (01 Jun 2008)

  01 Jun 2008; Benedikt Böhm <hollow@gentoo.org> +apache-2.2.8-r3.ebuild:
  fix mod_ssl memory leak wrt #222643

  19 Apr 2008; Benedikt Böhm <hollow@gentoo.org> -apache-2.2.8-r1.ebuild,
  apache-2.2.8-r2.ebuild:
  add mod_substitute wrt #218356

*apache-2.2.8-r2 (22 Mar 2008)

  22 Mar 2008; Benedikt Böhm <hollow@gentoo.org> +apache-2.2.8-r2.ebuild:
  fix #110556, #209095, #212837

  17 Feb 2008; Christoph Mende <angelos@gentoo.org> apache-2.2.8.ebuild:
  Stable on amd64, security bug #205195

*apache-2.2.8-r1 (02 Feb 2008)

  02 Feb 2008; Benedikt Böhm <hollow@gentoo.org> +apache-2.2.8-r1.ebuild:
  remove incremental mod_dir patches, fixes #139451

  31 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org> apache-2.2.8.ebuild:
  ppc stable, bug #205195

  29 Jan 2008; Raúl Porcel <armin76@gentoo.org> apache-2.2.8.ebuild: