@@ -1,6 +1,12 @@
 # ChangeLog for www-servers/apache
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.73 2008/06/11 19:08:59 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.74 2008/06/14 13:13:42 zmedico Exp $
+
+  14 Jun 2008; Zac Medico <zmedico@gentoo.org> apache-2.2.8.ebuild,
+  apache-2.2.8-r3.ebuild, apache-2.2.8-r4.ebuild:
+  Bug #226505 - For compatibility with phase execution order in
+  >=portage-2.1.5, call has_version inside pkg_preinst instead of
+  pkg_postinst.
 
 *apache-2.2.8-r4 (11 Jun 2008)
 
